--- a/1011.ipynb
+++ b/1011.ipynb
@@ -9,9 +9,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "word3\n",
+      "word2\n"
+     ]
+    }
+   ],
    "source": [
     "a = {\"word1\": 10, \"word2\": 8, \"word3\": 15}\n",
     "print(max(a, key=lambda x: a[x]))\n",
@@ -29,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,9 +48,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello\n"
+     ]
+    }
+   ],
    "source": [
     "print_hello() # вызов функции"
    ]
@@ -55,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,9 +85,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "4\n",
+      "end\n",
+      "10\n",
+      "12\n",
+      "16\n",
+      "end\n"
+     ]
+    }
+   ],
    "source": [
     "a = [1, 2, 3, 4, 5]\n",
     "b = [10, 12, 13, 15, 16]\n",
@@ -80,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +130,7 @@
    "source": [
     "a = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
     "print_divisible_numbers(a, 2)\n",
-    "print_divisible_numbers(a, 3)\n"
+    "print_divisible_numbers(a)\n"
    ]
   },
   {
@@ -111,9 +142,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "inside 5 6\n",
+      "outside 7 4\n"
+     ]
+    }
+   ],
    "source": [
     "def func(a):\n",
     "    a = 5\n",
@@ -128,9 +168,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-2\n"
+     ]
+    }
+   ],
    "source": [
     "def print_subtract(a, b):\n",
     "    print(a - b)\n",
@@ -149,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,9 +218,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 4]\n",
+      "[2, 4]\n"
+     ]
+    }
+   ],
    "source": [
     "a = [1, 2, 3, 4, 5]\n",
     "res1 = get_even_numbers(a)\n",
@@ -190,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,9 +259,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[10, 10, 10, 10, 10]\n"
+     ]
+    }
+   ],
    "source": [
     "a = create_list_n(10, 5)\n",
     "print(a)"
@@ -219,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,9 +296,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.0\n",
+      "can't divide by zero\n"
+     ]
+    }
+   ],
    "source": [
     "print(divide_with_zero(2, 1))\n",
     "print(divide_with_zero(1, 0))"
@@ -259,6 +333,16 @@
     "2. Словарь подаётся на вход в качестве аргумента; функция ничего не возвращает, но печатает список ключей на экран.\n",
     "3. Словарь определяется в коде функции, аргументов у функции нет; функция возвращает список ключей.\n",
     "4. Словарь определяется в коде функции, аргументов у функции нет; функция ничего не возвращает, но печатает список ключей на экран."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "d1 = {\"a\": 10, \"b\": 5, \"c\": 10} # -> [\"a\", \"c\"]\n",
+    "d2 = {\"a\": 10, \"b\": 5, \"c\": 5} # -> [\"a\"]"
    ]
   },
   {
@@ -308,7 +392,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.0 64-bit",
+   "display_name": "Python 3.6.1 32-bit ('Anaconda3')",
    "language": "python",
    "name": "python3"
   },
@@ -322,12 +406,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0"
+   "version": "3.6.1"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "364dcd152da2692276e72902df2858159ccc300c15062838033fe03303e9b26c"
+    "hash": "ad2bdc8ecc057115af97d19610ffacc2b4e99fae6737bb82f5d7fb13d2f2c186"
    }
   }
  },
