--- a/1711.ipynb
+++ b/1711.ipynb
@@ -113,7 +113,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*args и **kwargs"
+    "\\*args и **kwargs"
    ]
   },
   {
@@ -373,7 +373,9 @@
    "source": [
     "Практическое задание:\n",
     "\n",
-    "Переделать программу про умножение матриц так, чтобы каждая операция выполнялась отдельной функцией. В функции для умножения матрицы на число задать числу какое-нибудь значение по умолчанию."
+    "Переделать программу про умножение матриц так, чтобы каждая операция выполнялась отдельной функцией. В функции для умножения матрицы на число задать числу какое-нибудь значение по умолчанию.\n",
+    "\n",
+    "Постараться реализовать сложение произвольного количества матриц."
    ]
   }
  ],
