--- a/pop_quiz_0311.ipynb
+++ b/pop_quiz_0311.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Задача: записать в текстовый файл \"out.txt\" ттроку \"lol\"\n",
+    "1. Задача: записать в текстовый файл \"out.txt\" строку \"lol\"\n",
     "\n",
     "Какой код это выполнит? (возможно более одного варианта ответа)"
    ]
@@ -55,7 +55,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Задача: дан список строк, каждая из которых содержит число. Необходимо сгенерировать список, содержащий квадраты чисел в строковом представлении.\n",
+    "2. Задача: дан список строк, каждая из которых содержит число. Необходимо сгенерировать список, содержащий квадраты чисел в строковом представлении.\n",
     "\n",
     "Какой код это выполнит? (возможно более одного варианта ответа)"
    ]
