--- a/0112.ipynb
+++ b/0112.ipynb
@@ -99,6 +99,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "b = [1, 2]\n",
+    "# b = [1, 2, 0]\n",
+    "try:\n",
+    "    a = 1 / b[2]\n",
+    "except IndexError:  # обрабатываем несколько типов исключений по очереди\n",
+    "    print(\"Oops: out of range\")\n",
+    "    a = 0\n",
+    "except ZeroDivisionError:\n",
+    "    print(\"Oops: divide by zero\")\n",
+    "    a = 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "try:\n",
     "    a = 1 / 0\n",
     "except ZeroDivisionError as e:  # сохраняем текст исключения\n",
