new theory and tasks

--- a/ans_0903.ipynb
+++ b/ans_0903.ipynb
@@ -5,68 +5,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Квадратный корень"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def sqrt(num, prec=1e-4):\n",
-    "    x = 1\n",
-    "    y = (x + num / x) / 2\n",
-    "    while abs(x - y) > prec:\n",
-    "        x = y\n",
-    "        y = (y + num / y) / 2\n",
-    "    return y"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1.414213562373095"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "sqrt(2, 1e-8)"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "Таблица умножения"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def pif(n):\n",
+    "def multable(n):\n",
+    "    w = len(str(n * n))\n",
     "    for i in range(1, n + 1):\n",
     "        for j in range(1, n + 1):\n",
-    "            print(f\"{i * j:3}\", end=\" \")\n",
+    "            print(f\"{i * j:{w}}\", end=\" \")\n",
     "        print()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -87,7 +45,7 @@
     }
    ],
    "source": [
-    "pif(10)"
+    "multable(10)"
    ]
   },
   {
@@ -131,6 +89,49 @@
    ],
    "source": [
     "\" \".join(str(i) for i in sieve(1000))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Квадратный корень"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def sqrt(num, precision=1e-4):\n",
+    "    x = 1\n",
+    "    y = (x + num / x) / 2\n",
+    "    while abs(x - y) > precision:\n",
+    "        x = y\n",
+    "        y = (y + num / y) / 2\n",
+    "    return y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.414213562373095"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sqrt(2, 1e-8)"
    ]
   }
  ],
