--- a/0903.ipynb
+++ b/0903.ipynb
@@ -1,18 +1,4 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "code",
@@ -30,6 +16,11 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "StuaeIUmuYjA"
+      },
+      "outputs": [],
       "source": [
         "class LinkedList:\n",
         "  def __init__(self):\n",
@@ -118,15 +109,33 @@
         "    while node is not None:\n",
         "      yield node\n",
         "      node = node.next"
-      ],
-      "metadata": {
-        "id": "StuaeIUmuYjA"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Xh5EyUWwxwlP",
+        "outputId": "5f0f1c6b-af05-4050-a83e-684a0cd229ce"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "1\n",
+            "4\n",
+            "5 3 4 1 8 \n",
+            "3 4 1 8 \n",
+            "3\n",
+            "4 1 8 \n",
+            "3\n"
+          ]
+        }
+      ],
       "source": [
         "new_list = LinkedList()\n",
         "new_list.insert(1)\n",
@@ -142,37 +151,11 @@
         "new_list.remove_index(0)\n",
         "new_list.display()\n",
         "print(len(new_list))"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "Xh5EyUWwxwlP",
-        "outputId": "5f0f1c6b-af05-4050-a83e-684a0cd229ce"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "1\n",
-            "4\n",
-            "5 3 4 1 8 \n",
-            "3 4 1 8 \n",
-            "3\n",
-            "4 1 8 \n",
-            "3\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "for node in new_list:\n",
-        "  print(node.value)"
-      ],
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -180,16 +163,45 @@
         "id": "3uYRaW9Mztb9",
         "outputId": "7458adfe-6e08-4130-8e47-e70b65a87b79"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "8\n"
           ]
         }
+      ],
+      "source": [
+        "for node in new_list:\n",
+        "  print(node.value)"
+      ]
+    },
+    {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Задание:\n",
+        "\n",
+        "1. Реализовать метод, который определяет, есть ли в списке петли\n",
+        "2. Реализовать метод, который удаляет из списка повторяющиеся значения\n",
+        "3. (\\*) Реализовать метод, который сортирует список пузырьком (или любым другим алгоритмом по выбору) - с возможностью сортировки по возрастанию или убыванию"
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
