--- a/pop_quiz_1603.ipynb
+++ b/pop_quiz_1603.ipynb
@@ -14,56 +14,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "input = \"Был тихий серый вечер. Наш автобус номер семь шёл на запад.\"\n",
-    "output = 'Был ти-хий се-рый ве-чер. Наш а-вто-бус но-мер семь шёл на за-пад.'"
+    "input_text = \"Был тихий серый вечер. Наш автобус номер семь шёл на запад.\"\n",
+    "output_text = 'Был ти-хий се-рый ве-чер. Наш а-вто-бус но-мер семь шёл на за-пад.'"
    ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "2. Реализовать вычисление n-ного числа Фибоначчи:\n",
-    "\n",
-    "а) с помощью рекурсии"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "б) без помощи рекурсии"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "3. Реализовать алгоритм заливки (на входе: позиция старта и \"цвет\" стартового пикселя, на выходе - результат заливки)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
