--- a/1603.ipynb
+++ b/1603.ipynb
@@ -26,6 +26,11 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "YLI9pvfoz6um"
+      },
+      "outputs": [],
       "source": [
         "class DoublyLinkedList:\n",
         "    def __init__(self):\n",
@@ -111,15 +116,28 @@
         "\n",
         "    def __len__(self):\n",
         "        return self.length\n"
-      ],
-      "metadata": {
-        "id": "YLI9pvfoz6um"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "zsZKzCG24yuv",
+        "outputId": "f90b4c17-c28e-490b-e586-84bf4be7c26d"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "DoublyLinkedList([1])\n",
+            "DoublyLinkedList([])\n"
+          ]
+        }
+      ],
       "source": [
         "new_list = DoublyLinkedList()\n",
         "new_list.insert_last(1)\n",
@@ -129,46 +147,22 @@
         "print(new_list)\n",
         "new_list.remove_last()\n",
         "print(new_list)"
-      ],
-      "metadata": {
-        "id": "zsZKzCG24yuv",
-        "outputId": "f90b4c17-c28e-490b-e586-84bf4be7c26d",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "DoublyLinkedList([1])\n",
-            "DoublyLinkedList([])\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "for i in new_list:\n",
-        "    print(i.value)\n",
-        "for i in reversed(new_list):\n",
-        "    print(i.value)"
-      ],
+      "execution_count": null,
       "metadata": {
-        "id": "UJIyULRz8BHc",
-        "outputId": "a623f1d5-d643-4810-8a8f-31533890e466",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "UJIyULRz8BHc",
+        "outputId": "a623f1d5-d643-4810-8a8f-31533890e466"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "[1]\n",
             "a\n",
@@ -178,22 +172,38 @@
             "[1]\n"
           ]
         }
+      ],
+      "source": [
+        "for i in new_list:\n",
+        "    print(i.value)\n",
+        "for i in reversed(new_list):\n",
+        "    print(i.value)"
+      ]
+    },
+    {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Задание:\n",
+        "\n",
+        "реализовать методы для удаления первого, последнего и произвольного элементов с поддержкой краевых случаев: если после удаления в списке остаётся единственный элемент, то указатели start и end должны совпадать; если после удаления список становится пустым, оба указателя должны быть None."
       ]
     }
   ],
   "metadata": {
-    "language_info": {
-      "name": "python"
-    },
-    "orig_nbformat": 4,
     "colab": {
       "provenance": []
     },
+    "gpuClass": "standard",
     "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
+      "display_name": "Python 3",
+      "name": "python3"
     },
-    "gpuClass": "standard"
+    "language_info": {
+      "name": "python"
+    },
+    "orig_nbformat": 4
   },
   "nbformat": 4,
   "nbformat_minor": 0
