--- a/pop_quiz_2303.ipynb
+++ b/pop_quiz_2303.ipynb
@@ -1,6 +1,45 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. Реализовать вычисление n-ного числа Фибоначчи:\n",
+    "\n",
+    "а) с помощью рекурсии"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "б) без помощи рекурсии"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2. Реализовать алгоритм заливки (на входе: позиция старта и \"цвет\" стартового пикселя, на выходе - результат заливки)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
