updated class materials

--- a/potato.ipynb
+++ b/potato.ipynb
@@ -2,9 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['e', 'a']\n",
+      "['e', 'e']\n",
+      "['r']\n",
+      "['r']\n",
+      "['a']\n"
+     ]
+    }
+   ],
    "source": [
     "potoato = [[\"poetato\", \"pototo\"], {\"poetetoo\", \"popoto\"},\n",
     "           [\"potaro\", \"pokstato\"], {\"pootatoe\", \"poerato\"},\n",
@@ -21,7 +33,15 @@
     "                not in potatoes and potatoes in potatoes and potatoes not in potato\n",
     "                and potatoes is not None]\n",
     "\n",
-    "print(pototoes)"
+    "    print(pototoes)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "https://www.reddit.com/r/ProgrammerHumor/comments/11ygb42/list_incomprehension/"
    ]
   }
  ],
