changed duel.txt encoding to utf-8

--- a/0604.ipynb
+++ b/0604.ipynb
@@ -228,7 +228,7 @@
       "source": [
         "from string import punctuation\n",
         "\n",
-        "with open(\"duel.txt\", \"r\", encoding=\"cp1251\") as f:\n",
+        "with open(\"duel.txt\", \"r\", encoding=\"utf-8\") as f:\n",
         "    words = f.read().split()\n",
         "    words = [w.strip(punctuation).lower() for w in words]\n",
         "    words = [w for w in words if w]\n",
