--- a/pop_quiz_0604.ipynb
+++ b/pop_quiz_0604.ipynb
@@ -82,6 +82,21 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "4. Написать программу для игры в виселицу (загадывает случайное слово из словаря)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
