--- a/pop_quiz_0604.ipynb
+++ b/pop_quiz_0604.ipynb
@@ -97,6 +97,21 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "5. Написать программу, которая ищет в словаре пары слов, первое из которых заканчивается, а второе начинается на одно и то же сочетание букв (e.g. \"шлакоблокунь\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
